# fpt

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  FPT.c  FPToolkit.c  FPToolkitDemo.c  Makefile  README.md  compile_commands.json  install.sh  macos.c  main.c  test.sh
docs/: graphics.md  install.md
example/: main.c
examples/: CMakeLists.txt
examples/FPToolkitDemo/: main.c
examples/demo/: main.c
examples/ex0/: main.c
include/: fpt.h  graphics.h  input.h
include/fpt/: fpt.h
scripts/: compile_shaders.sh
source/: Makefile  graphics.c  input.c  main.c
src/: FPT.h  fpt.c  fpt.c.bak  fpt.h  gl.h  glad.c  glad.h  graphics.c  graphics.h
